fix: delete gap for price-wrapper, add j-content

--- a/sass/tamplates/_price.sass
+++ b/sass/tamplates/_price.sass
@@ -22,9 +22,8 @@
          background-size: contain
    &-wrapper
       display: flex
-      justify-content: center
+      justify-content: space-around
       margin-bottom: 100px
-      gap: 30px
    &-block
       padding: 32px
       width: 370px
